<resources>
    <string name="app_name">Alcotester</string>
    <string name="action_settings">Settings</string>
    <string name="alco_konc_krauj">Blood Alcohol Content</string>
    <string name="alco_konc_krauj2h">Blood alcohol content after 2h: </string>
    <string name="alco_konc_krauj4h">Blood alcohol content after 4h: </string>
    <string name="alco_konc_krauj8h">Blood alcohol content after 8h: </string>
    <string name="alco_konc_krauj0">Blood alcohol content will reach 0 in : </string>
    <string name="alco_konc_krauj1h">Blood alcohol content after 1h: </string>
    <string name="pasirinkite_lyti">Sex: </string>
    <string name="iveskite_svori">Enter your weight</string>
    <string name="suvartotas_alco"> List of drinks consumed</string>
    <string name="vyras">Male</string>
    <string name="moteris">Famale</string>
    <string name="svoris">Weight</string>
    <string name="skaiciuoti">Calculate</string>
    <string name="militrai">Milliliter</string>
    <string name="laipsniai">Alcohol Level</string>
    <string name="_01">0</string>
    <string name="_02">0</string>
    <string name="_03">0</string>
    <string name="_04">0</string>
    <string name="prideti">add</string>
    <string name="_05">0</string>
    <string name="_06">0</string>
    <string name="_07">0</string>
    <string name="_08">0</string>
    <string name="_9">9</string>
    <string name="_001">0</string>
    <string name="_002">0</string>
    <string name="h">h.</string>
    <string name="_003">0</string>
    <string name="_004">0</string>
    <string name="_005">0</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello!</string>
    <string name="slide_1_desc">Remember that many other factors (for example: your body type, age, sex, if you’ve taken any medication, how much food you’ve had to eat, etc.) can influence your BAC.</string>

    <string name="slide_2_title">Everyone Is Different</string>
    <string name="slide_2_desc">BAC calculators are merely an estimate. A breathalyzer or blood test is the only way to have an accurate measurement.</string>

    <string name="slide_3_title">Easy To Know</string>
    <string name="slide_3_desc">Just tell us a few things about what you drank and yourself.</string>
    <string name="alkoholis">alkoholis</string>
    <string name="alkoholis2">alkoholis2</string>
    <string name="alkoholis3" translatable="false">alkoholis3</string>
    <string name="rate_app">Rate my app</string>
    <string name="donate">Donate</string>
    <string name="Enter_your_weight">Enter your weight!</string>
    <string name="Enter_ml">Enter milliliters!</string>
    <string name="Enter_alco_vol">Enter alcohol volume!</string>
    <string name="Donate_me">Donate me ! :> </string>
    <string name="perdaugml">Įvedėte per daug mililitrų</string>
    <string name="perDaugLaipsniu">Įvedėte per daug laipsnių!</string>


</resources>
